<resources>
    <string name="app_name">Book App</string>
    <string name="welcome_to_reading_app">Welcome to reading app</string>
    <string name="continue_with_out_login">Continue with out login</string>
    <string name="login">Login</string>
    <string name="book_app">Book App</string>
    <string name="email">Email</string>
    <string name="password">Password\n</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_btn">Login</string>
    <string name="new_user_signup">New User?<b>SignUp</b></string>
    <string name="app_logo">App Logo</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="c_password">Confirm Password\n</string>
    <string name="register">Register</string>
    <string name="dashboard_user">Dashboard User</string>
    <string name="dashboard_admin">Dashboard Admin\n</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="abc_example_com">abc@example.com</string>
    <string name="add_new_category">Add a new category</string>
    <string name="category_title">Category Title</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="add_category">+ Add Category</string>
    <string name="add_a_new_book">Add a New Book</string>
    <string name="book_title">Book Title</string>
    <string name="book_description">Book Description</string>
    <string name="book_category">Book Category</string>
    <string name="upload">Upload</string>
    <string name="books">Books</string>
    <string name="category">Category\n</string>
    <string name="the_book_title">Book Title</string>
    <string name="the_description_of_the_book">The description of the book</string>
    <string name="caption_category">Category</string>
    <string name="_13mb">13MB</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="edit_book_info">Edit Book Info</string>
    <string name="_book_description">Book Description</string>
    <string name="update">Update</string>
    <string name="book_details">Book Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>