<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".LoginActivity">
<!--    Toolbar-->
  <RelativeLayout
      android:id="@+id/toolbarRl"
      android:layout_width="match_parent"
      android:layout_height="250dp"
      android:background="@drawable/shape_toolbar01"/>
    <ImageView
        android:id="@+id/iconIV"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo"/>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginStart="30dp"
      android:layout_marginTop="225dp"
      android:layout_marginEnd="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <!--     Email-->
      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/emailTil"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintEnabled="false">

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/shape_edittext01"
            android:drawableStart="@drawable/ic_email_gray"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey01" />
      </com.google.android.material.textfield.TextInputLayout>
      <!--      Password-->
      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/passwordTil"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/emailTil"
          android:layout_marginTop="5dp"
          app:hintEnabled="false"
          app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/shape_edittext01"
            android:drawableStart="@drawable/ic_lock_gray"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey01"/>
      </com.google.android.material.textfield.TextInputLayout>
      <!--      Forgot Password-->
      <TextView
          android:id="@+id/forgotTv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/passwordTil"
          android:layout_alignParentEnd="true"
          android:layout_marginTop="8dp"
          android:padding="5dp"
          android:text="@string/forgot_password"
          android:textColor="@color/grey02"/>
      <Button
          android:id="@+id/loginBtn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/forgotTv"
          android:layout_marginTop="20dp"
          android:text="@string/login_btn"
          android:textColor="@color/white"
          android:background="@drawable/shape_button01"/>
    </RelativeLayout>
  </ScrollView>
<!--  No Account Sign Up-->
  <TextView
      android:id="@+id/noAccountTV"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:padding="10dp"
      android:text="@string/new_user_signup"/>
</RelativeLayout>