<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".PdfAddActivity">
    <!--    Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">

        <!--        Back Button-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_white"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:padding="5dp"/>
        <!--        Icon Image -->
        <ImageView
            android:id="@+id/iconIV"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/backBtn"/>

        <!--         App Title-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_a_new_book"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/iconIV"
            android:textSize="28sp"
            android:textColor="@color/white"/>

        <!--        Attach pdf button-->
        <ImageButton
            android:id="@+id/attachPdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/attach_white"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:padding="5dp"/>

    </RelativeLayout>

    <!--    Input Title-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/titleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext01"
            android:drawableStart="@drawable/ic_pdf_grey"
            android:hint="@string/book_title"
            android:drawablePadding="10dp"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey01"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--    Input Description-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/titleTil"
        android:layout_marginTop="5dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/descriptionEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext01"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey01"
            android:text="@string/book_description"
            android:inputType="textMultiLine|textCapSentences"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_pdf_grey"
            android:drawablePadding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--    Pick category from dialog-->
    <TextView
        android:id="@+id/categoryTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionTil"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_edittext01"
        android:drawableStart="@drawable/cat_grey"
        android:drawableEnd="@drawable/ic_down_grey"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:hint="@string/book_category"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textColorHint="@color/grey01"
        android:textSize="16sp"/>

    <!--     Button upload pdf-->

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categoryTv"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/upload"
        android:textColor="@color/white"/>
</RelativeLayout>
