<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".PdfEditActivity">

<!--    Toolbar-->
   <RelativeLayout
       android:id="@+id/toolbarRl"
       android:layout_width="match_parent"
       android:layout_height="250dp"
       android:background="@drawable/shape_toolbar01">
<!--       Back button-->
       <ImageButton
           android:id="@+id/backBtn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/back_white"
           android:background="@color/transparent"
           android:padding="5dp"
           android:layout_margin="10dp"/>
<!--       Logo-->
       <ImageView
           android:id="@+id/iconIV"
           android:layout_width="110dp"
           android:layout_height="110dp"
           android:src="@drawable/logo"
           android:layout_marginTop="40dp"
           android:layout_centerHorizontal="true"/>
<!--       Title-->
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/iconIV"
           android:layout_centerHorizontal="true"
           android:fontFamily="sans-serif-condensed"
           android:text="@string/edit_book_info"
           android:textSize="28sp"
           android:layout_marginTop="10dp"
           android:textColor="@color/white"/>

   </RelativeLayout>

<!--    ScrollView-->
    <ScrollView
        android:layout_marginTop="225dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

<!--            Input book Title-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:hintEnabled="false">
            <EditText
                android:id="@+id/titleEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext01"
                android:drawableStart="@drawable/ic_pdf_grey"
                android:drawablePadding="10dp"
                android:hint="@string/the_book_title"
                android:inputType="textPersonName|textCapSentences"
                android:textSize="16sp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey01"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--            Input book Description-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleTil"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                app:hintEnabled="false">
            <EditText
                android:id="@+id/descriptionEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext01"
                android:drawableStart="@drawable/ic_pdf_grey"
                android:drawablePadding="10dp"
                android:hint="@string/_book_description"
                android:inputType="textMultiLine|textCapSentences"
                android:padding="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey01"/>
            </com.google.android.material.textfield.TextInputLayout>

<!--            Pick Book Category-->
         <TextView
             android:id="@+id/categoryTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/descriptionTil"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/shape_edittext01"
             android:drawableStart="@drawable/cat_grey"
             android:drawableEnd="@drawable/ic_down_grey"
             android:drawablePadding="10dp"
             android:gravity="center_vertical"
             android:hint="@string/book_category"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textColorHint="@color/grey01"
             android:textSize="16sp"/>

<!--           Button, Update Info -->
            <Button
                android:id="@id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/update"
                android:background="@drawable/shape_button01"
                android:layout_below="@+id/categoryTv"
                android:textColor="@color/white"/>
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>